my-app/service.yaml
# my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-website
spec:
  selector:
    app: static-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
